tests/errors/phantom-check/event-bind.fil
import "primitives/core.fil";

comp main<@G: 1>(
     left: [@G, @G+1] 32,
) -> () {
    r := new Register[32]<@G, @G+2>(left);
}